--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
-    <title>Uroljon's chat_room</title>
-
-</head>
+<%- include("partials/header") %> 
+<% var users %> 
 <style>
     * {
         box-sizing: border-box !important;
@@ -23,7 +11,11 @@
         <div class="row h-100">
             <div class="col-4 border border-right">
                 <h1 class="my-3">Users</h1>
-                <ul class="list-group" id="users_here"></ul>
+                <ul class="list-group" id="users_here">
+                    <%= users.forEach(user => { %>
+                        <li><% user.login %> </li>
+                    <% }) %>  
+                </ul>
             </div>
             <div class="col-8 d-flex flex-column h-100">
                 <div class="chat flex-grow-1 border border-primary">
@@ -39,11 +31,4 @@
         </div>
     </div>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
-    <script src="chat_front.js"></script>
-</body>
-
-</html>
+<%- include("partials/footer") %> 
